--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2018 Google LLC.
 
    Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,5 +17,7 @@
     <string name="app_name">HelloSceneform</string>
     <string name="length">length</string>
     <string name="height">height</string>
-    <string name="clear">Clear</string>
+    <string name="clear">Clear Points</string>
+
+    <string name="cleard">Clear Values</string>
 </resources>
