--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
    limitations under the License.
 -->
 <resources>
-    <string name="app_name">HelloSceneform</string>
+    <string name="app_name">FedEx DIMS</string>
     <string name="length">length</string>
     <string name="height">height</string>
     <string name="clear">Clear Points</string>
